--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title><center><h1>Sentido Heritance Negombo</h1></title><center>
+    <title>Sentido Heritance Negombo</title>
 </head>
 <body bgcolor="GOLDENROD">
     <h1>Sentido Heritance Negombo</h1>
